--- a/src/sass/info/main.scss
+++ b/src/sass/info/main.scss
@@ -42,7 +42,7 @@ body {
         border-radius: 30px;
         height: 10px;
         display: block;
-        width: 0;
+        width: 30%;
       }
       .percent {
         font-family: Gotham Pro;
