--- a/src/sass/info/main.scss
+++ b/src/sass/info/main.scss
@@ -689,7 +689,7 @@ color: #000000;
   background: #262626;
   padding: 50px 0;
   .container {
-    max-width: 1017px;
+//    max-width: 1017px;
     padding-left: 15px;
     padding-right: 15px;
   }
